<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WeatherApp</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_share">Share</string>
    <string name="action_donate">Donate</string>

    <!-- Prefs -->
    <string name="pref_unit_title">Measure unit</string>
    <string name="temp_title">Temperature unit</string>
    <string name="loc_title">Location</string>
    <string name="pref_location_title">Choose the location</string>
    <string name="lang_title">Weather message language</string>
    <string name="summary_lang">Current language</string>
    <string name="pref_lang_title">Select language</string>
    <string name="summary_loc">Current location</string>
    <string name="summary_temp">Current temperature unit</string>
    <string name="provider">data provided by Openweathermap</string>

    <string-array name="unit_names">
        <item>Celsius (Metric system)</item>
        <item>Fahrenheit (Imperial system)</item>
    </string-array>
    <string-array name="unit_values">
        <item>c</item>
        <item>f</item>
    </string-array>
    <string-array name="lang_names">
        <item>English</item>
        <item>Current system language</item>
    </string-array>
    <string-array name="lang_values">
        <item>en</item>
        <item>system</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Tab resources -->
    <string name="tab_current">Current</string>
    <string name="tab_forecast">Forecast</string>
</resources>
